<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/vector_drawable_nav_home"
        android:title="@string/home" />
    <item
        android:id="@+id/navigation_selling"
        android:icon="@drawable/vector_drawable_nav_selling"
        android:title="@string/selling" />
    <item
        android:id="@+id/navigation_sort"
        android:icon="@drawable/vector_drawable_nav_sort"
        android:title="@string/sort" />
    <item
        android:id="@+id/navigation_shopping_cart"
        android:icon="@drawable/vector_drawable_nav_shopping_cart"
        android:title="@string/shopping_cart" />
    <item
        android:id="@+id/navigation_mine"
        android:icon="@drawable/vector_drawable_nav_mine"
        android:title="@string/mine" />
</menu>