<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_while"
    tools:context=".ui.activity.LoginActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingTop="20dp"
        android:paddingRight="16dp"
        android:paddingBottom="12dp"
        app:layout_constraintTop_toBottomOf="@id/line">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/view_phone_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <EditText
                android:id="@+id/txt_phone_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/TextColor"
                android:inputType="number"
                android:hint="@string/hint_phone" />
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/view_password_wrapper"
            app:passwordToggleEnabled="true">
            <EditText
                android:id="@+id/txt_password_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/TextColor"
                android:hint="@string/hint_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>



        <com.hym.shop.ui.widget.LoadingButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:background="@drawable/bg_btn"
            app:text="@string/btn_login"
            app:loadingText="@string/loading_ch"
            app:progressColor="@color/theme_blue"
            android:enabled="false"
            app:textColor="@color/theme_blue"
            android:textColor="@color/theme_while" />


    </LinearLayout>

    <TextView
        android:id="@+id/txt_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginTop="2dp"
        android:gravity="center"

        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>