<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingTop="16dp"
    android:background="@color/theme_while">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/icon_hot_app"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center"
        >

        <ImageView
            android:layout_width="56dp"
            android:layout_height="56dp"
            app:srcCompat="@mipmap/ic_launcher"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guide_1"
            android:textStyle="normal"
            android:textSize="16sp"
            android:textColor="@color/theme_black"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/icon_hot_game"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center"
        >

        <ImageView
            android:layout_width="56dp"
            android:layout_height="56dp"
            app:srcCompat="@mipmap/ic_launcher"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guide_2"
            android:textStyle="normal"
            android:textSize="16sp"
            android:textColor="@color/theme_black"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/icon_hot_recommend"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center"
        >

        <ImageView
            android:layout_width="56dp"
            android:layout_height="56dp"
            app:srcCompat="@mipmap/ic_launcher"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guide_3"
            android:textStyle="normal"
            android:textSize="16sp"
            android:textColor="@color/theme_black"/>
    </LinearLayout>

</LinearLayout>
